--- a/.github/workflows/update_serials.yml
+++ b/.github/workflows/update_serials.yml
@@ -53,8 +53,11 @@ jobs:
     - name: Kutuphaneleri Yukle
 
       run: |
-
-        pip install -r requirements.txt
+        sudo apt-get update
+        sudo apt-get install -y xvfb google-chrome-stable
+        pip install seleniumbase beautifulsoup4
+        # SeleniumBase için sürücüyü indir
+        seleniumbase install chromedriver
 
 
 
